test_case/rust-lang_rust/84637_828410767_1.rs

Foo::replacement(&foo); //~ ERROR use of deprecated
